--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ psutil>=5
 scipy>=1.5
 sympy>=1.3
 dill>=0.3
+pyscf>=2.0.1
 python-dateutil>=2.8.0
 stevedore>=3.0.0
 symengine>=0.9 ; platform_machine == 'x86_64' or platform_machine == 'aarch64' or platform_machine == 'ppc64le' or platform_machine == 'amd64' or platform_machine == 'arm64'
