--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rand_distr = "0.4.3"
 indexmap = "1.8.2"
 ahash = "0.7.6"
 num-complex = "0.4"
+sprs = "0.11.0"
 
 [dependencies.pyo3]
 version = "0.16.5"
